# gstreamer-compositor-layouter

./: .gitmodules  meson.build
src/: compositor-layouter.cpp  compositor-layouter.hpp  example.cpp  util
